temp/unpackaged/objects/Resident__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assigned To</relationshipLabel>
        <relationshipName>Residents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residental_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residental Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Healthcare</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>notEqual</operation>
                <value>OSHC, Prospect, Customer - Direct, Customer - Channel, Channel Partner / Reseller, Installation Partner, Technology Partner, Other, Individual, Household, Corporate, Government, Nonprofit, Foundation, School</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Residents</relationshipLabel>
        <relationshipName>Residents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Referral_Date__c</columns>
        <columns>Residental_Facility__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Resident ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>